--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "sweetalert2": "^11.6.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
