--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "sweetalert2": "^11.6.4"
